--- a/_publications/2025-01-01-Rb-phase.md
+++ b/_publications/2025-01-01-Rb-phase.md
@@ -1,10 +1,14 @@
 ---
-title: "A microfabricated chip trap for laser-cooled molecules"
+title: "Fast, low-loss all-optical phase modulation in warm rubidium vapour"
 collection: publications
-category: thesis
-permalink: /publication/thesis
-excerpt: 'Design and construction of a microfabricated trap for CaF molecules.'
-paperurl: '/files/McGarry-C-2023-PhD-Thesis.pdf'
+category: manuscripts
+permalink: /publication/2025-01-01-Rb-phase-mod
+excerpt: 'We achieve a phase modulation of 90(5)% of pi via a two-photon
+transition in Rb vapour.'
+date: 2025-01-01
+venue: 'currently in preparation'
+paperurl: 'https://arxiv.org/abs/2309.04313'
+arxivurl: 'https://arxiv.org/abs/2309.04313'
 ---
 
 The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
