--- a/_publications/2024-06-03-hcf-cell.md
+++ b/_publications/2024-06-03-hcf-cell.md
@@ -3,8 +3,7 @@ title: "Low-loss, compact, fibre-integrated cell for quantum memories"
 collection: publications
 category: manuscripts
 permalink: /publication/2024-06-03-hcf-cell
-excerpt: 'A low-loss vapour cell formed of hollow core optical fibre for use in
-quantum memory systems.'
+excerpt: "<img src='/images/hcf-cover.png'>"
 date: 2024-06-03
 venue: 'Optics Express'
 paperurl: 'https://doi.org/10.1364/OE.520562'
@@ -12,4 +11,4 @@ arxivurl: 'https://arxiv.org/abs/2401.10651'
 citation: 'McGarry, C. et al. (2024). Low-loss, compact, fibre-integrated cell for quantum memories. Optics Express'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+A low-loss vapour cell formed of hollow core optical fibre for use in quantum memory systems.'
