--- a/_talks/2024-04-22-bqit.md
+++ b/_talks/2024-04-22-bqit.md
@@ -8,8 +8,36 @@ date: 2024-04-22
 location: "Bristol, UK"
 ---
 
-I present results from this paper and that paper...
+[Link to poster](/files/posters/2024_BQIT_compressed.pdf)
 
-[More information here](http://example2.com)
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+# Towards atoms in an optical fibre – modulating, multiplexing and memorising photons for quantum networks and computing
+
+## Relevant preprints
+
+[**All-optical phase modulation preprint**](https://arxiv.org/abs/2309.04313)
+
+[**Low-loss fibre cell preprint**](https://arxiv.org/abs/2401.10651)
+
+## Abstract
+
+We demonstrate all-optical phase modulation of light, alongside a route to integration with optical fibre networks. Our phase modulation scheme is achieved by means of a two-photon transition in rubidium, where the presence of a strong control field can modulate a weak signal field. We have designed and fabricated a cell for realising this scheme directly within optical fibre. Our cell is formed of a segment of hollow core fibre, with low-loss (0.6(2) dB at 780nm) interconnection to single mode fibre. The combination of these two developments has significant ramifications for the realisation of quantum networks and photonic quantum computing, with applications in quantum key distribution, optical memories and multiplexing of single photon sources.
+
+## Poster description
+
+One of the main challenges associated with photonic quantum computing and communication is the ability to multiplex single photons. This could be in the context of:
+- synchronising probabilistic photon sources,
+- implementing fibre loop memories,
+- generating resources states,
+- quantum key distribution
+or other scenarios.
+
+The requirements for multiplexing are that a single photon “switch” is both fast (to keep up with the rapid clock speeds required in a scalable quantum computer) and low-loss (to avoid quantum decoherence during switching).
+
+Here we present ongoing research to develop such a switch within optical fibre. Our switch will operate by modulating the phase of a photon – this maps directly to spatial multiplexing by embedding the phase modulator inside a Mach-Zehnder interferometer.
+
+The phase modulation scheme relies on a two-photon transition in Rb87 (c.f. FLAME). We modulate a weak signal  field, close to resonance with the lower transition, by the presence of a strong control  field, close to resonance with the upper transition. The presence of the control field couples the two higher states, changing the susceptibility of the Rb, and hence changing its refractive index as experienced by the signal field. This allows phase modulation to occur by modulating the intensity of the control field. Our results are detailed in the poster and in the Davis 2023 preprint (linked above).
+
+We aim to integrate this phase modulation scheme into optical fibre systems by realising a Rb vapour cell directly in fibre, allowing for scalable quantum infrastructure with multiplexed single photons. We note also that integrating with fibre yields benefits to the phase modulation scheme itself, by allowing higher intensity control fields to be achieved by the tight confinement of the light in the fibre core. Additionally, the cell could be used for FLAME schemes in fibre if desired.
+
+This fibre cell is realised by use of a segment of hollow core fibre (HCF) which can be filled with atomic vapour. Here we present low-loss interconnections from single mode fibre (SMF) to HCF via a graded index fibre (GIF) lensing scheme. This allows for the realisation of an empty cell. Low-loss interconnections are essential for quantum applications for the same reason as above: we do not wish to lose our single photon qubits at the interface of the cell. Loss spectra for the cell are presented in the poster, and detailed in the McGarry 2024 preprint (linked above).
