Improve spiel for papers and posters

--- a/_publications/2024-06-03-hcf-cell.md
+++ b/_publications/2024-06-03-hcf-cell.md
@@ -11,4 +11,6 @@ arxivurl: 'https://arxiv.org/abs/2401.10651'
 citation: 'McGarry, C. et al. (2024). Low-loss, compact, fibre-integrated cell for quantum memories. Optics Express'
 ---
 
+![image info](/images/hcf-cover.png)
+
 A low-loss vapour cell formed of hollow core optical fibre for use in quantum memory systems.'
