--- a/_talks/2023-09-11-quamp.md
+++ b/_talks/2023-09-11-quamp.md
@@ -8,7 +8,7 @@ date: 2023-09-11
 location: "Glasgow, UK"
 ---
 
-[Link to poster](/files/posters/2023_QUAMP.pdf)
+This poster received the prize in quantum optics. [Link to poster](/files/posters/2023_QUAMP.pdf)
 
 [**See the relevant preprint**](https://arxiv.org/abs/2309.04313)
 
