--- a/_publications/2025-01-01-Rb-phase.md
+++ b/_publications/2025-01-01-Rb-phase.md
@@ -10,7 +10,9 @@ paperurl: 'https://arxiv.org/abs/2309.04313'
 arxivurl: 'https://arxiv.org/abs/2309.04313'
 ---
 
-![image info](/images/Rb-phase-cover.png)
+![Key results from the phase modulation paper, showing the phase shift and
+transmission for various signal detunings. Left panels show experiment, and
+right panels show simulations.](/images/Rb-phase-cover.png)
 
 We achieve a phase modulation of 90(5)% of pi via a two-photon
 transition in Rb vapour.
