--- a/_talks/2023-09-11-quamp.md
+++ b/_talks/2023-09-11-quamp.md
@@ -10,7 +10,7 @@ location: "Glasgow, UK"
 
 This poster received the prize in quantum optics. [Link to poster](/files/posters/2023_QUAMP.pdf)
 
-[**See the relevant preprint**](https://arxiv.org/abs/2309.04313)
+[**See the relevant paper**](/publication/2025-01-01-Rb-phase-mod)
 
 Thank you for your interest in my poster, this informal summary is intended to
 be read alongside the poster for further information. A copy of the poster [can
