--- a/_talks/2024-04-22-bqit.md
+++ b/_talks/2024-04-22-bqit.md
@@ -13,11 +13,11 @@ location: "Bristol, UK"
 
 # Towards atoms in an optical fibre – modulating, multiplexing and memorising photons for quantum networks and computing
 
-## Relevant preprints
+## Relevant papers
 
-[**All-optical phase modulation preprint**](https://arxiv.org/abs/2309.04313)
+[**All-optical phase modulation**](/publication/2025-01-01-Rb-phase-mod)
 
-[**Low-loss fibre cell preprint**](https://arxiv.org/abs/2401.10651)
+[**Low-loss fibre cell**](/publication/2024-06-03-hcf-cell)
 
 ## Abstract
 
