DOI for phase modulation paper

--- a/_publications/2025-01-01-Rb-phase.md
+++ b/_publications/2025-01-01-Rb-phase.md
@@ -5,8 +5,8 @@ category: manuscripts
 permalink: /publication/2025-01-01-Rb-phase-mod
 excerpt: "<img src='/images/Rb-phase-cover.png'>"
 date: 2025-01-01
-venue: 'currently in preparation'
-paperurl: 'https://arxiv.org/abs/2309.04313'
+venue: 'IOP Quantum Science and Technology'
+paperurl: 'https://doi.org/10.1088/2058-9565/ad9fa3'
 arxivurl: 'https://arxiv.org/abs/2309.04313'
 ---
 
