Update ECTI page url in metadata

--- a/_talks/2025-09-08-ecti.md
+++ b/_talks/2025-09-08-ecti.md
@@ -2,7 +2,7 @@
 title: "Engineering tunable anharmonic potentials with light-atom interaction for chemical dynamics simulations"
 collection: talks
 type: "Poster"
-permalink: /talks/2025-09-08-ECTI
+permalink: /talks/2025-09-08-ecti
 venue: "European Conference on Trapped Ions"
 date: 2025-09-08
 location: "Egmond aan Zee, the Netherlands"
