--- a/_talks/2025-09-08-ecti.md
+++ b/_talks/2025-09-08-ecti.md
@@ -8,19 +8,11 @@ date: 2025-09-08
 location: "Egmond aan Zee, the Netherlands"
 ---
 
-[Link to poster TODO: update this](/files/posters/2024_EQUS_pagesize.pdf)
+[Link to poster](/files/posters/ECTI2025.pdf)
 
 ## Relevant papers
 
 **Anharmonicity theory preprint** - coming soon!
-
-[**Quantum simulation of chemical dynamics in an ion trap** ](https://doi.org/10.1039/D3SC02453A) (experimental details)
-
-## Abstract
-
-Trapped-ion platforms have emerged as a powerful architecture for simulating quantum dynamics in chemical systems. They have enabled studies of time-resolved vibrational spectroscopy [1], geometric phase effects at conical intersections [2, 3], and classically intractable open-system dynamics [4]. However, existing implementations have been limited to harmonic oscillator models, failing to encapsulate the anharmonicity present in molecular potentials.
-
-Here, we investigate implementing anharmonic dynamics in a trapped-ion system using all-optical quantum control. Specifically, we develop a flexible control scheme that leverages state-dependent forces and qubit rotations to engineer tunable anharmonic dynamics. As an example, we engineer a tunable double-well potential of the form 𝑉(𝑥) = δ𝑥ଶ + ϵ cos(η𝑥). This allows access to rich, nonlinear motional dynamics, most notably quantum tunneling between the two wells. These results establish a new pathway for simulating chemically relevant potentials in a controllable quantum platform.
 
 \[1\] [MacDonnell et al., Chem. Sci., 14, 9439 (2023)](https://doi.org/10.1039/D3SC02453A)
 
@@ -31,6 +23,36 @@ Here, we investigate implementing anharmonic dynamics in a trapped-ion system us
 \[4\] [Navickas et al. J. Am. Chem. Soc. (2025)](https://pubs.acs.org/doi/full/10.1021/jacs.5c03336)
 
 
+## Abstract
+
+Trapped-ion platforms have emerged as a powerful architecture for simulating quantum dynamics in chemical systems. They have enabled studies of time-resolved vibrational spectroscopy [1], geometric phase effects at conical intersections [2, 3], and classically intractable open-system dynamics [4]. However, existing implementations have been limited to harmonic oscillator models, failing to encapsulate the anharmonicity present in molecular potentials.
+
+Here, we investigate implementing anharmonic dynamics in a trapped-ion system using all-optical quantum control. Specifically, we develop a flexible control scheme that leverages state-dependent forces and qubit rotations to engineer tunable anharmonic dynamics. As an example, we engineer a tunable double-well potential. This allows access to rich, nonlinear motional dynamics, most notably quantum tunneling between the two wells. These results establish a new pathway for simulating chemically relevant potentials in a controllable quantum platform.
+
+
 ## Poster description
 
-TODO
+We have designed a scheme for implementing anharmonic potentials in a trapped
+ion system. Here we demonstrate the realisation of a double well potential, and
+obseve quantum tunneling between the wells.
+
+In the first box, we outline the circuit used to generate an effective cosine
+Hamiltonian, with depdence on the position operator _x_. The quantum signal
+processing (QSP) sequence we use consists of a pair of state-dependent force
+(SDF) operators, with an intermediary singe-qubit rotation. These realise a
+unitary evolution with both sine and cosine dependence. Running the same
+sequence backwards allows us to cancel the sine terms (up to a Trotter error)
+and hence realise the cosine unitary. The double well requires an additional
+quadratic term, which we achieve by applying a detuning to the SDF (an
+operating in the interaction picture).
+
+The experimental procedure is outlined in the second box. We prepare a
+displaced state (starting in one of the two wells) and then allow evolution
+under the double well Hamiltonian. Characterisation of the boson state is
+carried out by the [Flühmann technique](https://doi.org/10.1103/PhysRevLett.125.043602).
+We present preliminary results, with a good correspondence between the _x_
+expecation in the theory (both the solution of the master equation for the
+target potential and the simulation of the QSP sequence) and experiment.
+
+
+
